new changes on order-from

--- a/about.html
+++ b/about.html
@@ -631,7 +631,9 @@
 
                   <div class="footer-contacts">
                     <p><span>Tel:</span> +447947995687</p>
-                    <p><span>Email:</span> bolfiscleaning@yahoo.com</p>
+                    <p>
+                      <span>Email:</span> support@bolfiscleaningandeco.co.uk
+                    </p>
                     <p><span>Location:</span>4 Dockland street London</p>
                   </div>
                 </div>
@@ -658,7 +660,7 @@
                       <li><a href="#">Bedroom </a></li>
                     </ul>
                   </div>
-                  <div class="footer-icons">
+                  <!-- <div class="footer-icons">
                     <h5>Follow us</h5>
                     <ul>
                       <li>
@@ -692,13 +694,13 @@
                         </a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <!-- end single footer -->
             <div class="col-md-3 col-sm-3 col-xs-12">
-              <div class="footer-content">
+              <!-- <div class="footer-content">
                 <div class="footer-head">
                   <h4>Subscribe</h4>
                   <p>
@@ -719,6 +721,41 @@
                     </div>
                   </div>
                 </div>
+              </div> -->
+              <div class="footer-icons">
+                <h5>Follow us</h5>
+                <ul>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/share/xXKFxKGUJmc8pKwy/?mibextid=LQQJ4d"
+                      target="_blank"
+                    >
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://x.com/BolfisD32384" target="_blank">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://youtube.com/shorts/wU5ywl91iYk?si=IY2NfmGsVhzHeBZo"
+                      target="_blank"
+                    >
+                      <i class="fa fa-youtube"></i>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.instagram.com/bolfis.london?igsh=N2poMmx2czg1cDc2"
+                      target="_blank"
+                    >
+                      <i class="fa fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
             <!-- end single footer -->
