--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/venobox.css" />
     <!-- style css -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/loader.css" />
     <!-- responsive css -->
     <link rel="stylesheet" href="css/responsive.css" />
 
@@ -336,6 +337,16 @@
         </div>
       </div>
     </div>
+    <!-- Loader start Area -->
+    <div id="loader" class="container-full">
+      <div class="loadingio-spinner-dual-ring-2by998twmg8">
+        <div class="ldio-yzaezf3dcmj">
+          <div></div>
+          <div><div></div></div>
+        </div>
+      </div>
+    </div>
+
     <!-- Start contact Area -->
     <div class="map-area-top">
       <div class="container-full">
@@ -371,7 +382,12 @@
               <div class="footer-content">
                 <div class="footer-head">
                   <div class="footer-logo">
-                    <a href="#"><img src="img/logo/logo2.png" alt="" /></a>
+                    <img
+                      src="img/logo/logoImg.jpg"
+                      alt="logo"
+                      width="100"
+                      height="100"
+                    />
                   </div>
                   <p>
                     Get a personalized quote or consultation for your cleaning
@@ -380,7 +396,7 @@
 
                   <div class="footer-contacts">
                     <p><span>Tel:</span> +447947995687</p>
-                    <p><span>Email:</span> bolfiscleaning@yahoo.com</p>
+                    <p><span>Email:</span>support@bolfiscleaningandeco.co.uk</p>
                     <p><span>Location:</span> 4 Dockland street London</p>
                   </div>
                 </div>
@@ -407,7 +423,7 @@
                       <li><a href="#">Bedroom </a></li>
                     </ul>
                   </div>
-                  <div class="footer-icons">
+                  <!-- <div class="footer-icons">
                     <h5>Follow us</h5>
                     <ul>
                       <li>
@@ -441,13 +457,13 @@
                         </a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <!-- end single footer -->
             <div class="col-md-3 col-sm-3 col-xs-12">
-              <div class="footer-content">
+              <!-- <div class="footer-content">
                 <div class="footer-head">
                   <h4>Subscribe</h4>
                   <p>
@@ -468,6 +484,41 @@
                     </div>
                   </div>
                 </div>
+              </div> -->
+              <div class="footer-icons">
+                <h5>Follow us</h5>
+                <ul>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/share/xXKFxKGUJmc8pKwy/?mibextid=LQQJ4d"
+                      target="_blank"
+                    >
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://x.com/BolfisD32384" target="_blank">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://youtube.com/shorts/wU5ywl91iYk?si=IY2NfmGsVhzHeBZo"
+                      target="_blank"
+                    >
+                      <i class="fa fa-youtube"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.instagram.com/bolfis.london?igsh=N2poMmx2czg1cDc2"
+                      target="_blank"
+                    >
+                      <i class="fa fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
             <!-- end single footer -->
