--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
     </div>
     <!-- End portfolio Area -->
     <!-- Start Quote Area -->
-    <div class="quote-area area-padding parallax-bg">
+    <!-- <div class="quote-area area-padding parallax-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12">
@@ -1036,7 +1036,9 @@
                     <div class="quote-icon">
                       <i class="icon icon-phone"></i>
                       <span class="info-first">+44794799568</span>
-                      <span class="info-simple">bolfiscleaning@yahoo.com</span>
+                      <span class="info-simple"
+                        >support@bolfiscleaningandeco.co.uk</span
+                      >
                     </div>
                   </div>
                 </div>
@@ -1045,12 +1047,7 @@
             <div class="row">
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="row">
-                  <form
-                    id="contactForm"
-                    method="POST"
-                    action="contact.php"
-                    class="contact-form"
-                  >
+                  <form id="contactForm" class="contact-form">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                       <input
                         type="text"
@@ -1113,7 +1110,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Quote -->
 
     <!--Blog Area Start-->
@@ -1133,7 +1130,7 @@
                   ><i class="icon icon-phone-handset"></i>Call us:
                   +447947995687</span
                 ><span>Or</span>
-                <a class="banner-btn" href="#">Contact us</a>
+                <a class="banner-btn" href="contact.html">Contact us</a>
               </div>
             </div>
           </div>
@@ -1165,7 +1162,9 @@
 
                   <div class="footer-contacts">
                     <p><span>Tel:</span> +447947995687</p>
-                    <p><span>Email:</span> bolfiscleaning@yahoo.com</p>
+                    <p>
+                      <span>Email:</span> support@bolfiscleaningandeco.co.uk
+                    </p>
                     <p><span>Location:</span> 4 Dockland street London</p>
                   </div>
                 </div>
@@ -1192,7 +1191,7 @@
                       <li><a href="#">Bedroom </a></li>
                     </ul>
                   </div>
-                  <div class="footer-icons">
+                  <!-- <div class="footer-icons">
                     <h5>Follow us</h5>
                     <ul>
                       <li>
@@ -1223,13 +1222,13 @@
                         </a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <!-- end single footer -->
             <div class="col-md-3 col-sm-3 col-xs-12">
-              <div class="footer-content">
+              <!-- <div class="footer-content">
                 <div class="footer-head">
                   <h4>Subscribe</h4>
                   <p>
@@ -1250,6 +1249,41 @@
                     </div>
                   </div>
                 </div>
+              </div> -->
+              <div class="footer-icons">
+                <h5>Follow us</h5>
+                <ul>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/share/xXKFxKGUJmc8pKwy/?mibextid=LQQJ4d"
+                      target="_blank"
+                    >
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://x.com/BolfisD32384" target="_blank">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://youtube.com/shorts/wU5ywl91iYk?si=IY2NfmGsVhzHeBZo"
+                      target="_blank"
+                    >
+                      <i class="fa fa-youtube"></i>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.instagram.com/bolfis.london?igsh=N2poMmx2czg1cDc2"
+                      target="_blank"
+                    >
+                      <i class="fa fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
             <!-- end single footer -->
