--- a/order-from.html
+++ b/order-from.html
@@ -311,15 +311,21 @@
                         <option value="Residential Cleaning">
                           Residential Cleaning
                         </option>
-                        <option value="Commercial">Commercial Cleaning</option>
-                        <option value="Maid">Maid Services</option>
-                        <option value="House">House Cleaning</option>
-                        <option value="Carpet">Carpet Cleaning</option>
-                        <option value="Move">Move Out Cleaning</option>
-                        <option value="Office">Office Cleaning</option>
-                        <option value="Floor">Floor Scrubbing</option>
-                        <option value="MoveIn">Move In Cleaning</option>
-                        <option value="Ironing">Ironing Service</option>
+                        <option value="Commercial Cleaning">
+                          Commercial Cleaning
+                        </option>
+                        <option value="Maid Services">Maid Services</option>
+                        <option value="House Cleaning">House Cleaning</option>
+                        <option value="Carpet Cleaning">Carpet Cleaning</option>
+                        <option value="Move Out Cleaning">
+                          Move Out Cleaning
+                        </option>
+                        <option value="Office Cleaning">Office Cleaning</option>
+                        <option value="Floor Scrubbing">Floor Scrubbing</option>
+                        <option value="Move In Cleaning">
+                          Move In Cleaning
+                        </option>
+                        <option value="Ironing Service">Ironing Service</option>
                         <option value="Declutter & Organize">
                           Declutter & Organize
                         </option>
@@ -332,16 +338,16 @@
                         <option value="0">
                           How many professionals do you need?
                         </option>
-                        <option value="1">1 Person</option>
-                        <option value="2">2 Person</option>
-                        <option value="3">3 Person</option>
-                        <option value="4">4 Person</option>
-                        <option value="5">5 Person</option>
-                        <option value="6">6 Person</option>
-                        <option value="7">7 Person</option>
-                        <option value="8">8 Person</option>
-                        <option value="9">9 Person</option>
-                        <option value="10">10 Person</option>
+                        <option value="1">1 Staff</option>
+                        <option value="2">2 Staff</option>
+                        <option value="3">3 Staff</option>
+                        <option value="4">4 Staff</option>
+                        <option value="5">5 Staff</option>
+                        <option value="6">6 Staff</option>
+                        <option value="7">7 Staff</option>
+                        <option value="8">8 Staff</option>
+                        <option value="9">9 Staff</option>
+                        <option value="10">10 Staff</option>
                       </select>
                       <div class="help-block with-errors"></div>
                     </div>
@@ -355,8 +361,8 @@
                         name="material"
                       >
                         <option value="0">Cleaning materials</option>
-                        <option value="yes">Yes I have</option>
-                        <option value="No">No I dont</option>
+                        <option value="Yes I have">Yes I have</option>
+                        <option value="No I dont have">No I dont</option>
                       </select>
                       <select
                         id="hour"
@@ -366,13 +372,13 @@
                         <option value="0">
                           How many hours do you need our workers to stay?
                         </option>
-                        <option value="1">2</option>
-                        <option value="2">3</option>
-                        <option value="3">4</option>
-                        <option value="4">5</option>
-                        <option value="5">6</option>
-                        <option value="6">7</option>
-                        <option value="7">8</option>
+                        <option value="1 hours">2 hours</option>
+                        <option value="2 hours">3 hours</option>
+                        <option value="3 hours">4 hours</option>
+                        <option value="4 hours">5 hours</option>
+                        <option value="5 hours">6 hours</option>
+                        <option value="6 hours">7 hours</option>
+                        <option value="7 hours">8 hours</option>
                       </select>
                       <div class="help-block with-errors"></div>
                     </div>
@@ -478,7 +484,9 @@
 
                   <div class="footer-contacts">
                     <p><span>Tel:</span> +447947995687</p>
-                    <p><span>Email:</span> bolfiscleaning@yahoo.com</p>
+                    <p>
+                      <span>Email:</span> support@bolfiscleaningandeco.co.uk
+                    </p>
                     <p><span>Location:</span> 4 Dockland street London</p>
                   </div>
                 </div>
@@ -505,7 +513,7 @@
                       <li><a href="#">Bedroom </a></li>
                     </ul>
                   </div>
-                  <div class="footer-icons">
+                  <!-- <div class="footer-icons">
                     <h5>Follow us</h5>
                     <ul>
                       <li>
@@ -535,13 +543,13 @@
                         </a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <!-- end single footer -->
             <div class="col-md-3 col-sm-3 col-xs-12">
-              <div class="footer-content">
+              <!-- <div class="footer-content">
                 <div class="footer-head">
                   <h4>Subscribe</h4>
                   <p>
@@ -562,6 +570,41 @@
                     </div>
                   </div>
                 </div>
+              </div> -->
+              <div class="footer-icons">
+                <h5>Follow us</h5>
+                <ul>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/share/xXKFxKGUJmc8pKwy/?mibextid=LQQJ4d"
+                      target="_blank"
+                    >
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://x.com/BolfisD32384" target="_blank">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://youtube.com/shorts/wU5ywl91iYk?si=IY2NfmGsVhzHeBZo"
+                      target="_blank"
+                    >
+                      <i class="fa fa-youtube"></i>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.instagram.com/bolfis.london?igsh=N2poMmx2czg1cDc2"
+                      target="_blank"
+                    >
+                      <i class="fa fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
             <!-- end single footer -->
