career email solved

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                       <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
                       </li>
-
+                      <li><a class="" href="career.html">Careers</a></li>
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
                   </div>
@@ -196,6 +196,8 @@
                     <li>
                       <a class="pagess" href="pricing.html">PRICING</a>
                     </li>
+                    <li><a class="" href="career.html">Careers</a></li>
+
                     <li><a href="contact.html">contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
                   </ul>
