--- a/order-from.html
+++ b/order-from.html
@@ -171,6 +171,7 @@
                       <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
                       </li>
+                      <li><a class="" href="career.html">Careers</a></li>
 
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -209,6 +210,7 @@
                     <li>
                       <a class="pagess" href="service.html">Services</a>
                     </li>
+                    <li><a class="" href="career.html">Careers</a></li>
 
                     <li><a href="contact.html">contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
@@ -438,6 +440,17 @@
         </div>
       </div>
     </div>
+
+    <!-- Loader start Area -->
+    <div id="loader" class="container-full">
+      <div class="loadingio-spinner-dual-ring-2by998twmg8">
+        <div class="ldio-yzaezf3dcmj">
+          <div></div>
+          <div><div></div></div>
+        </div>
+      </div>
+    </div>
+
     <!-- Start Banner Area -->
     <div class="banner-area">
       <div class="container">
@@ -618,7 +631,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
               <div class="copyright">
                 <p>
-                  Copyright © 2018
+                  Copyright © 2024
                   <a href="#">Bolfis Cleaning and Decorating Limited</a> All
                   Rights Reserved
                 </p>
