--- a/service.html
+++ b/service.html
@@ -157,6 +157,8 @@
                       <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
                       </li>
+                      <li><a class="" href="career.html">Careers</a></li>
+
 
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -194,6 +196,7 @@
                     <li><a class="pagess" href="service.html">Services</a></li>
                     <li>
                       <a class="pagess" href="pricing.html">PRICING</a>
+                      <li><a class="" href="career.html">Careers</a></li>
                     </li>
 
                     <li><a href="contact.html">contacts</a></li>
@@ -727,7 +730,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
               <div class="copyright">
                 <p>
-                  Copyright © 2018
+                  Copyright © 2024
                   <a href="#">Bolfis cleaning & Decorating</a> All Rights
                   Reserved
                 </p>
