--- a/about.html
+++ b/about.html
@@ -158,6 +158,7 @@
                       <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
                       </li>
+                      <li><a class="" href="career.html">Careers</a></li>
 
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -193,6 +194,8 @@
                     <li>
                       <a class="pagess" href="pricing.html">PRICING</a>
                     </li>
+                    <li><a class="" href="career.html">Careers</a></li>
+
                     <li><a href="contact.html">contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
                   </ul>
