--- a/pricing.html
+++ b/pricing.html
@@ -171,6 +171,7 @@
                       <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
                       </li>
+                      <li><a class="" href="career.html">Careers</a></li>
 
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -209,6 +210,7 @@
                     <li>
                       <a class="pagess" href="service.html">Services</a>
                     </li>
+                    <li><a class="" href="career.html">Careers</a></li>
 
                     <li><a href="contact.html">contacts</a></li>
                   </ul>
@@ -588,7 +590,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
               <div class="copyright">
                 <p>
-                  Copyright © 2018
+                  Copyright © 2024
                   <a href="#">Bolfis Cleaning and Decorating Limited</a> All
                   Rights Reserved
                 </p>
