change the pricing page and add form to the our service

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                         <a class="pagess" href="service.html">Services</a>
                       </li>
 
-                      <li>
+                      <!-- <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
-                      </li>
+                      </li> -->
                       <li><a class="" href="career.html">Careers</a></li>
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -193,9 +193,9 @@
                     <li><a class="pagess" href="index.html">Home</a></li>
                     <li><a class="pagess" href="about.html">About us</a></li>
                     <li><a class="pagess" href="service.html">Services</a></li>
-                    <li>
+                    <!-- <li>
                       <a class="pagess" href="pricing.html">PRICING</a>
-                    </li>
+                    </li> -->
                     <li><a class="" href="career.html">Careers</a></li>
 
                     <li><a href="contact.html">contacts</a></li>
@@ -214,10 +214,10 @@
     <!-- Start Slider Area -->
     <div class="intro-area intro-area-2">
       <div class="main-overly"></div>
-      <div class="intro-carousel">
+      <div class="intro-carousel" data-ride="carousel">
         <div class="intro-content">
           <div class="slider-images">
-            <img src="img/slider/cl-1.jpg" alt="" />
+            <img src="img/slider/h1.jpg" alt="" />
           </div>
           <div class="slider-content">
             <div class="display-table">
@@ -255,9 +255,94 @@
             </div>
           </div>
         </div>
+
+        <!-- slider 2 -->
         <div class="intro-content">
           <div class="slider-images">
-            <img src="img/slider/h1.jpg" alt="" />
+            <img src="img/slider/cl-1.jpg" alt="" />
+          </div>
+          <div class="slider-content">
+            <div class="display-table">
+              <div class="display-table-cell">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                      <!-- layer 1 -->
+                      <div class="layer-1">
+                        <h1 class="title2">
+                          Bolfis Cleaning and
+                          <span class="color">Decorating</span> Limited
+                        </h1>
+                      </div>
+                      <!-- layer 2 -->
+                      <div class="layer-2">
+                        <p>
+                          A Cleaning company that provides professional
+                          services.
+                        </p>
+                      </div>
+                      <!-- layer 3 -->
+                      <div class="layer-3">
+                        <a href="service.html" class="ready-btn left-btn"
+                          >Our Services</a
+                        >
+                        <a href="contact.html" class="ready-btn right-btn"
+                          >Contact us</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- slider 3 -->
+        <div class="intro-content">
+          <div class="slider-images">
+            <img src="img/slider/ab.jpg" alt="" />
+          </div>
+          <div class="slider-content">
+            <div class="display-table">
+              <div class="display-table-cell">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                      <!-- layer 1 -->
+                      <div class="layer-1">
+                        <h1 class="title2">
+                          Bolfis Cleaning and
+                          <span class="color">Decorating</span> Limited
+                        </h1>
+                      </div>
+                      <!-- layer 2 -->
+                      <div class="layer-2">
+                        <p>
+                          A Cleaning company that provides professional
+                          services.
+                        </p>
+                      </div>
+                      <!-- layer 3 -->
+                      <div class="layer-3">
+                        <a href="service.html" class="ready-btn left-btn"
+                          >Our Services</a
+                        >
+                        <a href="contact.html" class="ready-btn right-btn"
+                          >Contact us</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- slider 4 -->
+        <div class="intro-content">
+          <div class="slider-images">
+            <img src="img/slider/h2.jpg" alt="" />
           </div>
           <div class="slider-content">
             <div class="display-table">
@@ -634,7 +719,7 @@
                   <li class="check">Secure services</li>
                   <li class="check">Organic cleaning</li>
                   <li class="check">Review system</li>
-                  <li class="check">Maintenance clening</li>
+                  <li class="check">Maintenance cleaning</li>
                   <li class="check">--------</li>
                 </ol>
                 <div class="price-btn">
