change the pricing page and add form to the our service

--- a/career.html
+++ b/career.html
@@ -165,9 +165,9 @@
                       <li>
                         <a class="pagess" href="service.html">Services</a>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
-                      </li>
+                      </li> -->
 
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -200,12 +200,12 @@
                     <li><a class="pagess" href="index.html">Home</a></li>
                     <li><a class="pagess" href="about.html">About us</a></li>
                     <li><a class="pagess" href="service.html">Services</a></li>
-                    <li>
+                    <!-- <li>
                       <a class="pagess" href="pricing.html">PRICING</a>
-                    </li>
+                    </li> -->
 
                     <li><a href="contact.html">contacts</a></li>
-                    <li><a href="order-from.html">Book Now</a></li>
+                    <!-- <li><a href="order-from.html">Book Now</a></li> -->
                   </ul>
                 </nav>
               </div>
