--- a/service.html
+++ b/service.html
@@ -154,9 +154,9 @@
                       <li>
                         <a class="pagess" href="service.html">Services</a>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
-                      </li>
+                      </li> -->
                       <li><a class="" href="career.html">Careers</a></li>
 
 
@@ -194,10 +194,10 @@
                     </li>
                     <li><a class="pagess" href="about.html">About us</a></li>
                     <li><a class="pagess" href="service.html">Services</a></li>
-                    <li>
+                    <!-- <li>
                       <a class="pagess" href="pricing.html">PRICING</a>
                       <li><a class="" href="career.html">Careers</a></li>
-                    </li>
+                    </li> -->
 
                     <li><a href="contact.html">contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
@@ -798,6 +798,11 @@
     <script src="js/form-validator.min.js"></script>
     <!-- plugins js -->
     <script src="js/plugins.js"></script>
+    <!-- email js plugins -->
+      <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
+    ></script>
         <!-- main js -->
     <script src="js/main.js"></script>
     <script src="js/service.js"></script>
