finalized all changes

--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
                       </li> -->
                       <li><a class="" href="career.html">Careers</a></li>
 
-                      <li><a href="contact.html">contacts</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
                     </ul>
                   </div>
                 </div>
@@ -196,7 +196,7 @@
                     </li> -->
                     <li><a class="" href="career.html">Careers</a></li>
 
-                    <li><a href="contact.html">contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
