--- a/pricing.html
+++ b/pricing.html
@@ -168,12 +168,12 @@
                       <li>
                         <a class="pagess" href="service.html">Services</a>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a class="pagess" href="pricing.html">PRICING</a>
-                      </li>
+                      </li> -->
                       <li><a class="" href="career.html">Careers</a></li>
 
-                      <li><a href="contact.html">contacts</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
                     </ul>
                   </div>
                 </div>
@@ -212,7 +212,7 @@
                     </li>
                     <li><a class="" href="career.html">Careers</a></li>
 
-                    <li><a href="contact.html">contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                   </ul>
                 </nav>
               </div>
@@ -406,6 +406,18 @@
               <input type="hidden" id="yearly_rate" value="&amp;pound;209" />
             </div>
           </div>
+        </div>
+      </div>
+      <div
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+        "
+      >
+        <div class="price-btn">
+          <a href="order-from.html">Book now</a>
         </div>
       </div>
     </section>
