--- a/service.html
+++ b/service.html
@@ -160,7 +160,7 @@
                       <li><a class="" href="career.html">Careers</a></li>
 
 
-                      <li><a href="contact.html">contacts</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
                     </ul>
                   </div>
                 </div>
@@ -199,7 +199,7 @@
                       <li><a class="" href="career.html">Careers</a></li>
                     </li> -->
 
-                    <li><a href="contact.html">contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
@@ -493,9 +493,13 @@
         <input type="tel" id="phone" placeholder="Phone Number" required />
         <select required id="service">
           <option value="">Select Service</option>
-          <option>Home Cleaning</option>
-          <option>Office Cleaning</option>
-          <option>Painting & Decorating</option>
+          <option value="Office Cleaning">Office Cleaning</option>
+          <option value="Apartment cleaning">Apartment cleaning</option>
+          <option value="Carpet cleaning">Carpet cleaning</option>
+          <option value="House cleaning">House cleaning</option>
+          <option value="Residential cleaning">Residential cleaning</option>
+          <option value="After renovation">After renovation</option>
+          <option value="Commercial cleaning">Commercial cleaning</option>
           <option>Other</option>
         </select>
         <button type="submit" class="submit-btn">Submit</button>
