--- a/career.html
+++ b/career.html
@@ -169,7 +169,7 @@
                         <a class="pagess" href="pricing.html">PRICING</a>
                       </li> -->
 
-                      <li><a href="contact.html">contacts</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
                     </ul>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
                       <a class="pagess" href="pricing.html">PRICING</a>
                     </li> -->
 
-                    <li><a href="contact.html">contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                     <!-- <li><a href="order-from.html">Book Now</a></li> -->
                   </ul>
                 </nav>
