--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
                       </li> -->
                       <li><a class="" href="career.html">Careers</a></li>
 
-                      <li><a href="contact.html">contacts</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
                     </ul>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                     </li> -->
                     <li><a class="" href="career.html">Careers</a></li>
 
-                    <li><a href="contact.html">contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
