--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <a class="pagess" href="pricing.html">PRICING</a>
                       </li> -->
                       <li><a class="" href="career.html">Careers</a></li>
-                      <li><a href="contact.html">contacts</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
                     </ul>
                   </div>
                 </div>
@@ -198,7 +198,7 @@
                     </li> -->
                     <li><a class="" href="career.html">Careers</a></li>
 
-                    <li><a href="contact.html">contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
