--- a/order-from.html
+++ b/order-from.html
@@ -173,7 +173,7 @@
                       </li>
                       <li><a class="" href="career.html">Careers</a></li>
 
-                      <li><a href="contact.html">contacts</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
                     </ul>
                   </div>
                 </div>
@@ -212,7 +212,7 @@
                     </li>
                     <li><a class="" href="career.html">Careers</a></li>
 
-                    <li><a href="contact.html">contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                     <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
