update on discount and creating of landing page contact form

--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/ico.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo/logo-edit-removebg-preview.png" />
 
     <!-- all css here -->
 
@@ -119,10 +119,10 @@
                   href="index.html"
                 >
                   <img
-                    src="img/logo/logoImg.jpg"
+                    src="img/logo/logo-edit-removebg-preview.png"
                     alt=""
-                    width="100"
-                    height="100"
+                    width="80"
+                    height="80"
                   />
                 </a>
               </div>
@@ -180,10 +180,10 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="img/logo/logoImg.jpg"
+                      src="img/logo/logo-edit-removebg-preview.png"
                       alt="logo"
-                      width="100"
-                      height="100"
+                      width="50"
+                      height="50"
                   /></a>
                 </div>
                 <nav id="dropdown">
@@ -487,7 +487,7 @@
     <div class="modal-content">
       <span class="close" onclick="closeModal()">&times;</span>
       <h4>Request a Service</h2>
-      <form onsubmit="serviceForm(), event.preventDefault()" id="serviceForm">
+      <form onsubmit="serviceForm(event)" id="serviceForm">
         <input type="text" id="name" placeholder="Full Name" required />
         <input type="email" id="email" placeholder="Email Address" required />
         <input type="tel" id="phone" placeholder="Phone Number" required />
@@ -500,6 +500,9 @@
           <option value="Residential cleaning">Residential cleaning</option>
           <option value="After renovation">After renovation</option>
           <option value="Commercial cleaning">Commercial cleaning</option>
+          <option value="Deep and Spring Cleaning">Deep and spring cleaning</option>
+                            <option value="Interior Decorating and Repairs">Interior Decorating and repairs</option>
+                            <option value="Garden Cleaning and restoration ">Garden Cleaning and restoration</option>
           <option>Other</option>
         </select>
         <button type="submit" class="submit-btn">Submit</button>
@@ -611,7 +614,7 @@
                   <div class="footer-logo">
                     <a href="#"
                       ><img
-                        src="img/logo/logoImg.jpg"
+                        src="img/logo/logo-edit-removebg-preview.png"
                         alt="logo"
                         width="100"
                         height="100"
