--- a/career.html
+++ b/career.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/ico.jpg" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="img/logo/logo-edit-removebg-preview.png"
+    />
 
     <!-- all css here -->
 
@@ -134,10 +138,10 @@
                   href="index.html"
                 >
                   <img
-                    src="img/logo/logoImg.jpg"
+                    src="img/logo/logo-edit-removebg-preview.png"
                     alt="background"
-                    width="100"
-                    height="100"
+                    width="80"
+                    height="80"
                   />
                 </a>
               </div>
@@ -189,10 +193,10 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="img/logo/logoImg.jpg"
+                      src="img/logo/logo-edit-removebg-preview.png"
                       alt="logo"
-                      width="100"
-                      height="100"
+                      width="50"
+                      height="50"
                   /></a>
                 </div>
                 <nav id="dropdown">
@@ -777,7 +781,7 @@
                 <div class="footer-head">
                   <div class="footer-logo">
                     <img
-                      src="img/logo/logoImg.jpg"
+                      src="img/logo/logo-edit-removebg-preview.png"
                       alt="logo"
                       width="100"
                       height="100"
