--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/ico.jpg" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="img/logo/logo-edit-removebg-preview.png"
+    />
 
     <!-- all css here -->
 
@@ -123,27 +127,16 @@
                   href="index.html"
                 >
                   <img
-                    src="img/logo/logoImg.jpg"
+                    src="img/logo/logo-edit-removebg-preview.png"
                     alt="background"
-                    width="100"
-                    height="100"
+                    width="80"
+                    height="80"
                   />
                 </a>
               </div>
             </div>
             <!-- logo end -->
             <div class="col-md-9 col-sm-9">
-              <div class="header-right-link">
-                <!-- search option start -->
-                <!-- <form action="#">
-                                    <div class="search-option">
-                                        <input type="text" placeholder="Search...">
-                                        <button class="button" type="submit"><i class="fa fa-search"></i></button>
-                                    </div>
-                                    <a class="main-search" href="#"><i class="fa fa-search"></i></a>
-                                </form> -->
-                <!-- search option end -->
-              </div>
               <!-- mainmenu start -->
               <nav class="navbar navbar-default">
                 <div class="collapse navbar-collapse" id="navbar-example">
@@ -179,10 +172,10 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="img/logo/logoImg.jpg"
+                      src="img/logo/logo-edit-removebg-preview.png"
                       alt="logo"
-                      width="100"
-                      height="100"
+                      width="50"
+                      height="50"
                   /></a>
                 </div>
                 <nav id="dropdown">
@@ -385,7 +378,7 @@
                 <div class="footer-head">
                   <div class="footer-logo">
                     <img
-                      src="img/logo/logoImg.jpg"
+                      src="img/logo/logo-edit-removebg-preview.png"
                       alt="logo"
                       width="100"
                       height="100"
