--- a/order-from.html
+++ b/order-from.html
@@ -129,10 +129,10 @@
                   href="index.html"
                 >
                   <img
-                    src="img/logo/logoImg.jpg"
+                    src="img/logo/logo-edit-removebg-preview.png"
                     alt=""
-                    width="100"
-                    height="100"
+                    width="80"
+                    height="80"
                   />
                 </a>
               </div>
@@ -193,10 +193,10 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="img/logo/logoImg.jpg"
+                      src="img/logo/logo-edit-removebg-preview.png"
                       alt=""
-                      width="100"
-                      height="100"
+                      width="50"
+                      height="50"
                   /></a>
                 </div>
                 <nav id="dropdown">
