--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="img/logo/logo-edit-removebg-preview.png"
+    />
 
     <!-- all css here -->
 
@@ -129,10 +133,10 @@
                   href="index.html"
                 >
                   <img
-                    src="img/logo/logoImg.jpg"
+                    src="img/logo/logo-edit-removebg-preview.png"
                     alt=""
-                    width="100"
-                    height="100"
+                    width="80"
+                    height="80"
                   />
                 </a>
               </div>
@@ -193,10 +197,10 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="img/logo/logoImg.jpg"
+                      src="img/logo/logo-edit-removebg-preview.png"
                       alt=""
-                      width="100"
-                      height="100"
+                      width="50"
+                      height="50"
                   /></a>
                 </div>
                 <nav id="dropdown">
