update on discount and creating of landing page contact form

--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
         <div class="modal-contact-dis">
           <a href="#contact-sec-form" onclick="closeDiscountModal(event)" class="submit-btn-dis">Get a Quote</a>
           <span>OR</span>
-          <a href="https://wa.me/447438168728" target="_blank" class="wasp-btn" onclick="closeDiscountModal(event)"><i class="fa fa-whatsapp"
+          <a href="https://wa.me/+447438168728" target="_blank" class="wasp-btn"><i class="fa fa-whatsapp"
               style="padding-right: 5px; font-size: large;"></i>WhatsApp US</a>
 
         </div>
